// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> shapshots should render 1`] = `
<div
  className="icon "
  style={
    Object {
      "webkitMaskImage": "url(https://some.url/something.svg)",
    }
  }
/>
`;

exports[`<Spinner /> shapshots should render with the given classname and style 1`] = `
<div
  className="icon myClass"
  style={
    Object {
      "color": "blue",
      "webkitMaskImage": "url(https://some.url/something.svg)",
    }
  }
/>
`;
